--- a/토스/css/style.css
+++ b/토스/css/style.css
@@ -898,6 +898,13 @@ section{
   border-radius: 26px;
   width:120px;
   height: 120px;
+  position: relative;
+}
+.box > *{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .box1{
   background-color: #ffe69b;
